--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </div>
     </header>
     <div class="content">
-    <div class="wrapper">
+    <div class="wrapper main">
         <section id="left-column">
             <h2>About Me</h2>
 
